# LaTTe

./: BUGS  INSTALL  LICENSE  Makefile.in  README  TODO  configure  configure.in
doc/: Makefile.in  latte.man  latte.texi  license.terms  modules.txt
include/: Arrays.h  Makefile.in  defs.h  files.h  java_lang_Object.h  java_lang_String.h  java_lang_Thread.h  jtypes.h  kthread.h  native.h  nets.h  system.h
lib/: Makefile.in  external_native.h  external_wrappers.h
lib/agent/: Makefile.in
lib/agent/sun.tools.debug.stubs/: Agent.h  AgentStub.c
lib/core/: Makefile.in
lib/core/java.io/: File.c  FileDescriptor.c  FileInputStream.c  FileOutputStream.c  ObjectInputStream.c  ObjectOutputStream.c  ObjectStreamClass.c  RandomAccessFile.c
lib/core/java.io.stubs/: FileDescriptorStub.c  FileInputStreamStub.c  FileOutputStreamStub.c  FileStub.c  ObjectInputStreamStub.c  ObjectOutputStreamStub.c  ObjectStreamClassStub.c  RandomAccessFileStub.c
lib/core/java.lang/: Class.c  ClassLoader.c  Compiler.c  Double.c  Float.c  Math.c  Object.c  Runtime.c  SecurityManager.c  String.c  System.c  Thread.c  Throwable.c  UNIXProcess.c
lib/core/java.lang.reflect/: Array.c  Constructor.c  Field.c  Method.c
lib/core/java.lang.reflect.stubs/: ArrayStub.c  ConstructorStub.c  FieldStub.c  MethodStub.c
lib/core/java.lang.stubs/: Class.h  ClassLoader.h  ClassLoaderStub.c  ClassStub.c  CompilerStub.c  DoubleStub.c  FloatStub.c  MathStub.c  Object.h  ObjectStub.c  ProcessReaper.h  ProcessReaperStub.c  RuntimeStub.c  SecurityManagerStub.c  String.h  StringStub.c  SystemStub.c  Thread.h  ThreadStub.c  ThrowableStub.c  UNIXProcessStub.c
lib/core/java.util/: ResourceBundle.c
lib/core/java.util.stubs/: ResourceBundle.h  ResourceBundleStub.c
lib/net/: Makefile.in
lib/net/java.net/: InetAddressImpl.c  PlainDatagramSocketImpl.c  PlainSocketImpl.c  SocketInputStream.c  SocketOutputStream.c
lib/net/java.net.stubs/: InetAddressImplStub.c  InetAddressStub.c  PlainDatagramSocketImplStub.c  PlainSocketImplStub.c  SocketInputStreamStub.c  SocketOptionsStub.c  SocketOutputStreamStub.c
lib/zip/: Makefile.in
lib/zip/java.util.zip/: Adler32.c  CRC32.c  Deflater.c  Inflater.c
lib/zip/java.util.zip.stubs/: Adler32Stub.c  CRC32Stub.c  DeflaterStub.c  InflaterStub.c
src/: Makefile.in  access.h  basic.h  basic.ic  bytecode.c  bytecode.h  bytecode.ic  config-def.h  config-io.h  config-math.h  config-mem.h  config-setjmp.h  config-signal.h  config-std.h  config.h.in  gtypes.h  jit.h  main.c  md.h
src/interpreter/: Make.frag  interpreter.S  interpreter.h  intrp-debug.c  intrp-exception.c  intrp-resolve.c  intrp-support.c
src/kaffejit/: Make.frag  basecode.c  basecode.h  checks.h  code-analyse.c  code-analyse.h  codeproto.h  constpool.c  constpool.h  funcs.c  icode.c  icode.h  jit.def  kaffe.def  labels.c  labels.h  machine.c  machine.h  registers.c  registers.h  seq.c  seq.h  slots.c  slots.h
src/runtime/: baseClasses.c  baseClasses.h  classMethod.c  classMethod.h  classMethod.ic  class_inclusion_test.c  class_inclusion_test.h  code.c  code.h  constants.c  constants.h  errors.h  exception.c  exception.h  exception.ic  exception_handler.c  exception_handler.h  external.c  external.h  file.h  findInJar.c  flags.c  flags.h  gc.c  gc.h  itypes.c  itypes.h  lerrno.h  locks-internal.h  locks.c  locks.h  lookup.c  lookup.h  object.c  object.h  paths.h  prime.c  prime.h  readClass.c  readClass.h  (+20 more)
src/translator/: AllocStat.c  AllocStat.h  AllocStat.ic  ArgSet.h  ArgSet.ic  CFG.c  CFG.h  CFG.ic  CallSiteInfo.c  CallSiteInfo.h  CallSiteInfo.ic  InstrNode.c  InstrNode.h  InstrNode.ic  InvokeType.h  Make.frag  MapVar2TValue.h  MapVar2TValue.ic  SPARC_instr.h  SPARC_instr.ic  SpecializedMethod.c  SpecializedMethod.h  SpecializedMethod.ic  TypeAnalysis.c  TypeAnalysis.h  TypeChecker.c  TypeChecker.h  TypeChecker.ic  TypedValue.h  TypedValue.ic  bit_vector.c  bit_vector.h  bit_vector.ic  bytecode_analysis.c  bytecode_analysis.h  bytecode_profile.c  bytecode_profile.h  cell_node.c  cell_node.h  cell_node.ic  (+62 more)
util/: print_offsets.c
